--- a/style.css
+++ b/style.css
@@ -75,15 +75,16 @@ body{
     height: 100px;
     margin-top: 50px;
     animation: rozz 3s linear infinite;
-    background:radial-gradient(purple, #00ccff)
+    background:#00ccff;
 }
 
 @keyframes rozz{
-    0%{box-shadow: 0px 0px 5px #d500f9;}
-    50%{box-shadow: 0px 0px 30px #d500f9;}
-    100%{box-shadow: 0px 0px 5px #d500f9;}
+    0%{box-shadow: 0px 0px 5px #f90000;}
+    50%{box-shadow: 0px 0px 40px #f90000;}
+    100%{box-shadow: 0px 0px 5px #f90000;}
 }
 
+/* @media(5 pole) */
 @media screen and (max-width:2000px) {
     #media{background-color: aquamarine;}
 }
