--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body{
 /* maska */
 #maska{
     background-image: url(https://c4.wallpaperflare.com/wallpaper/108/140/869/digital-digital-art-artwork-fantasy-art-drawing-hd-wallpaper-thumb.jpg);
-    mask-image: linear-gradient(transparent, white);
+    mask-image: linear-gradient(white, transparent);
     border: 1px solid lime;
 }
 
