--- a/styl2.css
+++ b/styl2.css
@@ -9,7 +9,7 @@ body{
     justify-content: center;
 }
 
-#cube{
+#div{
     width: 800px;
     height: 500px;
     position: absolute;
@@ -17,47 +17,15 @@ body{
     left: 30%;
     box-sizing: content-box;
     transform: rotate3d(0, 90, 0, 180deg);
-    animation: obroty 8s linear infinite;
+    justify-content: center;
+    align-items: center;
 }
 
-.bok{
+#bok{
     width: 100px;
     height: 100px;
-}
-
-/* podawane miejsca od pozycji startowej */
-
-/* przod-prawo */
-#b1{
-    background: radial-gradient(rgb(0, 252, 0), rgb(9, 90, 9));
-    position:absolute;
-    top: 25vh;
-    left:49%;
-    transform: rotate3d(-15, 45, -7, 45deg);
-
-}
-
-/* przod-lewo */
-#b2{
-    background: radial-gradient(rgb(197, 252, 0), rgb(75, 90, 9));
-    position:absolute;
-    top: 25vh;
-    left: 40%;
-    transform: rotate3d(15, 45, 7, 45deg);
-
-}
-
-/* gora */
-#b3{
-    background: radial-gradient(rgb(0, 193, 252), rgb(9, 89, 163));
     position: absolute;
-    top: 19.2vh;
-    left: 43.8%;
-    transform: rotate3d(24, 55, 75, 215deg);
-    width: 110px;
-}
-
-@keyframes obroty{
-    0%{transform: rotate3d(0, 90, 0, 180deg);}
-    100%{transform: rotate3d(0, 90, 0, 540deg)}
+    top: 45%;
+    left: 45%;
+    background: radial-gradient(rgb(252, 172, 0), rgb(163, 122, 9))
 }
