--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     overflow-y: scroll;
 }
 
-/* styl komórek */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 .div{
     background-color: blanchedalmond;
     height: 200px;
@@ -16,7 +16,7 @@ body{
     border-radius: 10px;
 }
 
-/* kropki stylu (reszta w app.js) */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 .falaa{
     width: 20px;
     height: 20px;
@@ -31,7 +31,7 @@ body{
     100%{background-color:red; top:16.5%;}
 }
 
-/* kolorowa ramka */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 #rama{
     overflow: hidden;
     align-items: center;
@@ -58,7 +58,7 @@ body{
     to{rotate: 360deg;}
 }
 
-/* zaznaczenie opcji */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 #zaznaczenie{
     display: flex;
     width: 100px;
@@ -69,7 +69,7 @@ body{
     justify-content: center;
 }
 
-/* podswietlanie tła wokół opcji */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 #swiec{
     width: 100px;
     height: 100px;
@@ -84,7 +84,7 @@ body{
     100%{box-shadow: 0px 0px 5px #f90000;}
 }
 
-/* @media(5 pole) */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 @media screen and (max-width:2000px) {
     #media{background-color: aquamarine;}
 }
@@ -101,7 +101,7 @@ body{
     #media{background-color: aquamarine;}
 }
 
-/* maska */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 #maska{
     background-image: url(https://c4.wallpaperflare.com/wallpaper/108/140/869/digital-digital-art-artwork-fantasy-art-drawing-hd-wallpaper-thumb.jpg);
     mask-image: linear-gradient(white, transparent);
@@ -109,7 +109,7 @@ body{
     color: white;
 }
 
-/* kursor */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 #cursor{
     display: flex;
     flex-direction: row;
@@ -153,7 +153,7 @@ body{
     cursor: zoom-out;
 }
 
-/* odnośniki */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 a:hover{
     color: orange;
 }
@@ -161,7 +161,7 @@ a{
     color: blue;
 }
 
-/* resize */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 #ress{
     resize: both;
     overflow: auto;
@@ -170,14 +170,14 @@ a{
     justify-content: center;
 }
 
-/* multi columns */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 #columns{
     column-count: 3;
     column-rule: 2px dashed darkblue;
     display: block;
 }
 
-/* offset */
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
 #offset{
     display: block;
     background-color: #d500f9;
@@ -192,3 +192,5 @@ a{
     0%{offset-distance: 0%;}
     100%{offset-distance: 100%;}
 }
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------ */
